--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "author": "Ale B. C.",
   "dependencies": {
+    "@textea/json-viewer": "^3.1.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
