--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "Ale B. C.",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.14.0",
     "@textea/json-viewer": "^3.1.1",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
