--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "install:vercel": "npm install --legacy-peer-deps"
   },
   "author": "Ale B. C.",
   "dependencies": {
