--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "react-json-view": "^1.21.3",
     "tailwindcss": "3.3.2",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/platform": "^1.3.6"
   }
 }
